# Uveitis-Segmentation-bs

./: .editorconfig  .gitignore  AGENTS.md  EXPERIMENT_LOG.md  README.md  RESULTS.md  environment.yml  pyproject.toml  requirements.txt
configs/: convnext_multilabel.yaml  default.yaml  dinov3_convnext_tiny_diffleak.yaml  dinov3_convnext_tiny_multilabel_itksnap.yaml  dinov3_convnext_tiny_multilabel_itksnap_seed43.yaml  dinov3_convnext_tiny_multilabel_morph_tta.yaml  dinov3_vitb16_fpn_multilabel.yaml  dinov3_vitb16_mae_multilabel.yaml  dinov3_vitb16_multilabel_itksnap.yaml  dinov3_vitb16_multilabel_itksnap_640.yaml  dinov3_vitb16_multilabel_wbe.yaml  dinov3_vitb16_multilabel_wbe_v2.yaml  paper_unet.yaml  paper_unet_itksnap.yaml  sam2_mae_multilabel.yaml  unet_multilabel_768_optimized.yaml  unet_multilabel_itksnap.yaml  unet_multilabel_optimized.yaml
docs/: dinov3_segmentation.md  project_structure.md  system_environment.md
ppts/: uveitis_segmentation_summary.pptx  uveitis_segmentation_summary.pptx.inspect.ndjson  ~$uveitis_segmentation_summary.pptx
scripts/: check_environment.py  compare_rdh_s3rd.py  convert_dinov3_convnext_weights.py  convert_dinov3_vit_weights.py  evaluate_dinov3_postprocess.py  evaluate_ensemble_postprocess.py  export_best_morphology_config.py  export_final_visualizations.py  export_uncertainty_visualizations.py  index_dataset.py  log_eval_result.py  pack_project.py  run_5fold_after_1fold.sh  run_5fold_resume.sh  run_both_dinov3.sh  run_cgmf_search_5fold.sh  run_diffleak_f1_ablation.sh  run_dinov3_after_unet_itksnap.sh  run_dinov3_mae.sh  (+18 more)
(+60 files in other folders)
