[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bs"
version = "0.1.0"
description = "Graduation design codebase for medical image segmentation experiments."
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.1",
  "Pillow>=11.0",
  "PyYAML>=6.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

